# pipedrive_gw

./: .gitignore  Cargo.toml  Cross.toml  README.md
.github/workflows/: rust.yml
db/: api.sql  model.sql  tbl.sql
docs/: README.md  services.json
docs/error_codes/: error_codes.md  error_codes_en.json
etc/: config_template.json
etc/systemd/: pipedrive_gw_user.service
scripts/: deploy.sh  deploy_cross.sh  drop_and_recreate_database.sh  remount_functions.sh  restart_services.sh  setup_database.sh  upload_docs.sh
src/codegen/: Cargo.toml  lib.rs  main.rs  rust.rs  service.rs  sql.rs
src/lib/: Cargo.toml  config.rs  database.rs  error_code.rs  handler.rs  listener.rs  log.rs  mod.rs  scheduler.rs  toolbox.rs  utils.rs
src/lib/http/: mod.rs  server.rs
src/lib/ws/: basics.rs  client.rs  conn.rs  headers.rs  mod.rs  push.rs  server.rs
src/model/: endpoint.rs  types.rs
src/service/: enums.rs  services.rs
src/service/user/: endpoints.rs  main.rs  method.rs  pg_func.rs  pipedrive.rs
static/: index.html
